# serializer version: 1
# name: TestJobSeekerAssignment.test_assign_job_seeker[False-True][assignment creation sql queries]
  dict({
    'num_queries': 6,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."prescriber_id",
                 "users_jobseekerassignment"."prescriber_organization_id"
          FROM "users_jobseekerassignment"
          WHERE ("users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_id" IS NULL
                 AND "users_jobseekerassignment"."prescriber_organization_id" = %s)
          LIMIT 21
          FOR
          UPDATE
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          INSERT INTO "users_jobseekerassignment" ("created_at",
                                                   "updated_at",
                                                   "job_seeker_id",
                                                   "prescriber_id",
                                                   "prescriber_organization_id")
          VALUES (%s, %s, %s, %s, %s) RETURNING "users_jobseekerassignment"."id"
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestJobSeekerAssignment.test_assign_job_seeker[False-True][assignment update sql queries]
  dict({
    'num_queries': 4,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."prescriber_id",
                 "users_jobseekerassignment"."prescriber_organization_id"
          FROM "users_jobseekerassignment"
          WHERE ("users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_id" IS NULL
                 AND "users_jobseekerassignment"."prescriber_organization_id" = %s)
          LIMIT 21
          FOR
          UPDATE
        ''',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          UPDATE "users_jobseekerassignment"
          SET "created_at" = %s,
              "updated_at" = %s
          WHERE "users_jobseekerassignment"."id" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestJobSeekerAssignment.test_assign_job_seeker[True-False][assignment creation sql queries]
  dict({
    'num_queries': 6,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."prescriber_id",
                 "users_jobseekerassignment"."prescriber_organization_id"
          FROM "users_jobseekerassignment"
          WHERE ("users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_id" = %s
                 AND "users_jobseekerassignment"."prescriber_organization_id" IS NULL)
          LIMIT 21
          FOR
          UPDATE
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          INSERT INTO "users_jobseekerassignment" ("created_at",
                                                   "updated_at",
                                                   "job_seeker_id",
                                                   "prescriber_id",
                                                   "prescriber_organization_id")
          VALUES (%s, %s, %s, %s, %s) RETURNING "users_jobseekerassignment"."id"
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestJobSeekerAssignment.test_assign_job_seeker[True-False][assignment update sql queries]
  dict({
    'num_queries': 4,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."prescriber_id",
                 "users_jobseekerassignment"."prescriber_organization_id"
          FROM "users_jobseekerassignment"
          WHERE ("users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_id" = %s
                 AND "users_jobseekerassignment"."prescriber_organization_id" IS NULL)
          LIMIT 21
          FOR
          UPDATE
        ''',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          UPDATE "users_jobseekerassignment"
          SET "created_at" = %s,
              "updated_at" = %s
          WHERE "users_jobseekerassignment"."id" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestJobSeekerAssignment.test_assign_job_seeker[True-True][assignment creation sql queries]
  dict({
    'num_queries': 6,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."prescriber_id",
                 "users_jobseekerassignment"."prescriber_organization_id"
          FROM "users_jobseekerassignment"
          WHERE ("users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_id" = %s
                 AND "users_jobseekerassignment"."prescriber_organization_id" = %s)
          LIMIT 21
          FOR
          UPDATE
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          INSERT INTO "users_jobseekerassignment" ("created_at",
                                                   "updated_at",
                                                   "job_seeker_id",
                                                   "prescriber_id",
                                                   "prescriber_organization_id")
          VALUES (%s, %s, %s, %s, %s) RETURNING "users_jobseekerassignment"."id"
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestJobSeekerAssignment.test_assign_job_seeker[True-True][assignment update sql queries]
  dict({
    'num_queries': 4,
    'queries': list([
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          SELECT "users_jobseekerassignment"."id",
                 "users_jobseekerassignment"."created_at",
                 "users_jobseekerassignment"."updated_at",
                 "users_jobseekerassignment"."job_seeker_id",
                 "users_jobseekerassignment"."prescriber_id",
                 "users_jobseekerassignment"."prescriber_organization_id"
          FROM "users_jobseekerassignment"
          WHERE ("users_jobseekerassignment"."job_seeker_id" = %s
                 AND "users_jobseekerassignment"."prescriber_id" = %s
                 AND "users_jobseekerassignment"."prescriber_organization_id" = %s)
          LIMIT 21
          FOR
          UPDATE
        ''',
      }),
      dict({
        'origin': list([
          'JobSeekerAssignment.save[<site-packages>/django/db/models/base.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': '''
          UPDATE "users_jobseekerassignment"
          SET "created_at" = %s,
              "updated_at" = %s
          WHERE "users_jobseekerassignment"."id" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'JobSeekerAssignmentManager.assign_job_seeker[users/models.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: TestModel.test_create_job_seeker_by_proxy[email jobseeker created by proxy]
  '''
  Bonjour Monsieur John DOE,
  
  Votre compte candidat vient d’être créé sur les Emplois de l’inclusion par Pierre DUPONT de Pres. Org..
  
  Pour finaliser votre inscription, merci de cliquer sur le lien suivant : [RESET PASSWORD LINK REMOVED]. Ce lien expirera dans 14 jours.
  Dès votre arrivée sur le site des Emplois de l’inclusion, vous serez invité à définir un mot de passe pour votre compte candidat.
  
  Cet e-mail a été généré et envoyé automatiquement, merci de ne pas y répondre.
  
  ---
  [TEST] Cet email est envoyé depuis un environnement de démonstration, merci de ne pas en tenir compte [TEST]
  Les emplois de l'inclusion
  http://localhost:8000/
  '''
# ---
